--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
           table, th, td {
-            border: 1px solid black;
+            border: 1px solid rgb(255, 255, 255);
             border-collapse: collapse;
           }
     </style>
@@ -90,11 +90,8 @@
 
             <article style="margin-top: 15%;">
 
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore
-                incidunt nemo commodi doloribus labore illo nam consequuntur, vel
-                accusamus quidem omnis suscipit delectus quos ipsa ut sunt
-                consequatur animi natus!
+              <p style="font-size: 30px; background-color: aquamarine;">
+                Baku is one of the most beautiful places in Azerbaijan on account of its modern city centre and historical old town. The Flame Towers form the focal point of the capital and light up after sundown. Icheri Sheher, the medieval core, exhibits Islamic styles of architecture, while lavish European facades line the Old City. The most beautiful attractions are along Baku Boulevard, a long promenade near the Caspian Sea, and there are superb views from the hill near Martyrs’ Lane.
               </p>
             </article>
 
@@ -103,7 +100,7 @@
 
       <!-- Aside -->
       <aside>
-        <table style="margin-top: 80px; width: 100%; margin-bottom: 5%;">
+        <table style="margin-top: 80px; width: 100%; margin-bottom: 5%; font-size: 20px; background-color: black; color: azure;">
           <thead>
             <tr> <th colspan="2">My gear</th> </tr>
           </thead>
