--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <!-- Main -->
     <main>
-      <div>
+      <div style="display: inline">
         <h1 style="margin-left: 45%;">Contact form</h1>
         <form style="margin-left: 45%;">
           <label for="fname">Fullname:</label>
@@ -62,7 +62,7 @@
           <br />
           <br />
 
-          <div>Gender</div>
+          <div style="display: inline;">Gender</div>
           <br />
           <br />
           <label>Male</label>
