--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
           <br />
           <br />
           <label>Male</label>
-          <input type="radio" name="male" value="male" /><br />
+          <input type="radio" name="choose" value="male" /><br />
           <label>Female</label>
-          <input type="radio" name="female" value="female" /><br />
+          <input type="radio" name="choose" value="female" /><br />
           <br />
           <br />
 
